--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -23,6 +23,8 @@
 
   "item.tutorialmod.pink_garnet_horse_armor": "Pink Garnet Horse Armor",
 
+  "item.tutorialmod.kaupen_armor_trim_smithing_template": "Kaupen Smithing Template",
+
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet",
   "block.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
 
