--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -25,6 +25,8 @@
 
   "item.tutorialmod.kaupen_armor_trim_smithing_template": "Kaupen Smithing Template",
 
+  "item.tutorialmod.kaupen_bow": "Kaupen Bow",
+
   "block.tutorialmod.pink_garnet_block": "Block of Pink Garnet",
   "block.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
 
